Fix console codemirror overflow issue. fixes #324

--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,10 @@ button {
 	justify-content: flex-end;
 }
 
+.flex-shrink-0 {
+	flex-shrink: 0
+}
+
 .fr {
 	float: right;
 }
@@ -1375,11 +1379,15 @@ body > #demo-frame {
 }
 
 .console .CodeMirror {
-	height: calc(100% - 30px);
+	flex-grow: 1;
+	/* flex-basis of 0 to trigger overflow https://stackoverflow.com/a/52489012/891962 */
+	flex-basis: 0;
 }
 
 .console__log {
 	flex: 1;
+	display: flex;
+	flex-direction: column;
 }
 
 .console-exec-input {
